# JournalPulse

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
app/streamlit/: app.py
artifacts/models/: lstm_tokenizer.json  production.json
artifacts/models/transformer_model/: config.json
artifacts/reports/: evaluation.json  evaluation.md
assets/resources/: catalog.json
docs/: LEARNING_RESOURCES.md  STREAMLIT_CLOUD_DEPLOYMENT.md  TECHNICAL_GUIDE.md
scripts/: train.py
src/emotion_journal/: __init__.py  analytics.py  api.py  coach.py  config.py  db.py  experience.py  llm.py  model.py  preprocessing.py  recommendations.py  resources.py  schemas.py
tests/: conftest.py  test_api.py  test_core.py  test_model_smoke.py  test_training_config.py
